cari sendiri
